helm/wildfly-k8s/rendered.yaml
---
# Source: wildfly-k8s/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wildfly-k8s
  labels:
    helm.sh/chart: wildfly-k8s-0.1.0
    app.kubernetes.io/name: wildfly-k8s
    app.kubernetes.io/instance: wildfly
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
    - port: 9990
      targetPort: 9990
      protocol: TCP
      name: admin
    - port: 7600
      targetPort: 7600
      protocol: TCP
      name: jgroups
  selector:
    app.kubernetes.io/name: wildfly-k8s
    app.kubernetes.io/instance: wildfly
---
# Source: wildfly-k8s/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wildfly-k8s
  labels:
    helm.sh/chart: wildfly-k8s-0.1.0
    app.kubernetes.io/name: wildfly-k8s
    app.kubernetes.io/instance: wildfly
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: wildfly-k8s
      app.kubernetes.io/instance: wildfly
  template:
    metadata:
      labels:
        helm.sh/chart: wildfly-k8s-0.1.0
        app.kubernetes.io/name: wildfly-k8s
        app.kubernetes.io/instance: wildfly
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      imagePullSecrets:
        - name: registry.local.credentials
      serviceAccountName: wildfly-k8s

#      initContainers:
#        - name: wildfly-cli-init
#          image: "quay.io/wildfly/wildfly:35.0.1.Final-jdk21"
#          command:
#            - /bin/sh
#            - -c
#            - |
#              # Add the user silently with the new password (assumes $ADMIN_PASSWORD is set via env or secret)
#              /opt/jboss/wildfly/bin/add-user.sh admin "${ADMIN_PASSWORD}" --silent
#
#              # Start WildFly in admin-only mode in the background
#              /opt/jboss/wildfly/bin/standalone.sh -c standalone-full-ha.xml --admin-only &
#
#              # Wait for the management interface to be up
#              until curl -sS http://127.0.0.1:9990 > /dev/null; do
#                echo "Waiting for WildFly to start in admin-only mode..."
#                sleep 3
#              done
#
#              echo "WildFly is up, running CLI scripts..."
#
#              # Run the CLI script
#              /opt/jboss/wildfly/bin/jboss-cli.sh --connect --user=admin --password="${ADMIN_PASSWORD}" --file=/cli/wildfly.cli
#
#              # Ensure WildFly is running and then execute the required CLI commands
#              if [ $? -eq 0 ]; then
#                echo "WildFly CLI executed successfully"
#                # If you need to shutdown WildFly
#                /opt/jboss/wildfly/bin/jboss-cli.sh --connect --user=admin --password="${ADMIN_PASSWORD}" --command="shutdown"
#                else
#                echo "CLI execution failed"
#              fi
#
#              echo "Starting WildFly"
#              /opt/jboss/wildfly/bin/standalone.sh -c standalone-full-ha.xml -b 0.0.0.0
#          env:
#            - name: ADMIN_PASSWORD
#              valueFrom:
#                secretKeyRef:
#                  name: wildfly.admin.secret
#                  key: password
#          volumeMounts:
##            - name: config-volume
##              mountPath: /opt/jboss/wildfly/standalone/configuration
#            - name: cli-scripts
#              mountPath: /cli




      containers:
        - name: wildfly-k8s
          image: "quay.io/wildfly/wildfly:35.0.1.Final-jdk21"
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
            - |
              [...]
          lifecycle:
            preStop:
              exec:
                command: ["/opt/jboss/wildfly/bin/jboss-cli.sh", "--connect", ":shutdown(timeout=30)"]
          terminationGracePeriodSeconds: 60
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - containerPort: 7600
            - containerPort: 8888
            - containerPort: 9990
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          resources:
            limits:
              cpu: 2000m
              memory: 2048Mi
            requests:
              cpu: 1000m
              memory: 1024Mi
          volumeMounts:
            - name: cli-scripts
              mountPath: /cli
#            - name: config-volume
#              mountPath: /opt/jboss/wildfly/standalone/configuration
            - name: jars-volume
              mountPath: /opt/jboss/wildfly/standalone/deployments
              subPath: deployments
      volumes:
#        - name: config-volume
        - name: cli-scripts
          configMap:
            name: wildfly-cli
        - name: scripts-volume
          configMap:
            name: init-scripts-configmap
        - name: scripts-dir
          emptyDir: {}
        - name: jars-volume
          emptyDir: {}
---
# Source: wildfly-k8s/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wildfly-k8s
  labels:
    helm.sh/chart: wildfly-k8s-0.1.0
    app.kubernetes.io/name: wildfly-k8s
    app.kubernetes.io/instance: wildfly
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "rancher-wildfly.local"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: wildfly-k8s
                port:
                  number: 8080
---
# Source: wildfly-k8s/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "wildfly-k8s-test-connection"
  labels:
    helm.sh/chart: wildfly-k8s-0.1.0
    app.kubernetes.io/name: wildfly-k8s
    app.kubernetes.io/instance: wildfly
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['wildfly-k8s:8080']
  restartPolicy: Never
